<resources>
    <string name="app_name">prepko</string>
    <string name="edit_message">Enter a message</string>
    <string name="send_message">send</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_full_Name">Full Name</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_Repeat_Password">Repeat Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="about_prepko">About prepko</string>
    <string name="our_main_goal_at_prepko_is_to_make_your_cooking_experience_as_enjoyable_and_easy_as_possible_while_making_you_a_better_cook_with_each_meal_we_also_bring_a_unique_feature_to_all_of_our_recipes_they_are_all_kosher_so_what_is_kosher_kashrut_means_fit_proper_or_correct_also_mindful_consumption_and_personal_accountability_on_what_you_consume_r_peretz_motzkin_kosher_is_a_strict_set_of_jewish_laws_that_were_made_to_ensure_people_follow_the_correct_way_to_consume_foods_and_drinks_making_sure_the_animals_have_zero_imperfections_and_were_not_abused_kashrut_is_divided_into_three_main_food_categories_meat_dairy_and_parve_parve_foods_that_are_neither_meat_nor_dairy_are_called_parve_usually_refers_to_eggs_fish_fruits_vegetables_legumes_grains_soft_drinks_pasta_candy_etc_about_our_kashrut_we_are_currently_certified_by_the_rcc_rabbinical_council_of_california_for_any_questions_about_our_kashrut_please_email_us_at_info_prepko_com_and_will_send_you_our_kashrut_certification">Our main goal at Prepko is to make your cooking experience as enjoyable and easy as possible while making you a better cook with each meal. We also bring a unique feature to all of our recipes. They are all kosher! So what is Kosher? Kashrut- means fit, proper or correct. Also, “Mindful consumption” and “Personal accountability on what you consume” {R’ Peretz Motzkin}. Kosher is a strict set of Jewish laws that were made to ensure people follow the correct way to consume foods and drinks, making sure the animals have zero imperfections and were not abused. Kashrutis divided into three main food categories: Meat, dairy and *parve. *Parve- foods that are neither meat nor dairy are called parve- usually refers to Eggs, fish, fruits, vegetables, legumes, grains, soft drinks, pasta, candy etc. About our Kashrut. We are currently certified by the RCC- Rabbinical Council of California. For any questions about our Kashrut, please email us at info@prepko.com and will send you our Kashrut certification.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>



</resources>
